Storage/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: storage
spec:
  nodeSelector:
    kubernetes.io/hostname: erkan2
  containers:
  - name: storage
    image: alpine
    command:
    - sleep
    - "5000"
    volumeMounts:
    - name: website
      mountPath: /srv
    imagePullPolicy: IfNotPresent
  terminationGracePeriodSeconds: 5
  volumes:
  - name: website
    persistentVolumeClaim:
      claimName: mio
