Storage/mysql-client-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqlclient
spec:
  ports:
    - port: 8080
  selector:
    app: mysqlclient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqlclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqlclient 
  template:
    metadata:
      labels:
        app: mysqlclient

    spec:
      containers:
        - name: client
          image: ubuntu
          command: 
          - /bin/bash 
          - /init/init.sh
          volumeMounts:
            - name: cgi-script
              mountPath: /www/cgi-bin
            - name: mysqlinit
              mountPath: /init
      volumes:
        - name: cgi-script
          configMap:
            name: mysqlclient 
            defaultMode: 0555
        - name: mysqlinit
          configMap:
            name: mysqlinit
            defaultMode: 0777
